@@ -4,26 +4,54 @@ NICE MENUS UPGRADES
 ===================
 5.x, 6.x-1.x ---> 6.x-2.x
 -------------------------
-There is an update hook and you should run update.php to get things moved around properly. Aside from the minor database changes, there are a number of things you should be aware of, especially in light of any customizations you may have made.
+There is an update hook and you should run update.php to get things moved 
+around properly. Aside from the minor database changes, there are a number of 
+things you should be aware of, especially in light of any customizations you 
+may have made.
 
-THEME FUNCTIONS RENAMED
-The theme functions have all been renamed to be more in line with Drupal standards, so if you are overwriting the functions in your theme's template.php or calling the functions anywhere in your theme, you should update the function names. The old functions were called theme_nice_menu_* and the new ones are theme_nice_menus_*, with an "s" to match the module name.
+THEME FUNCTIONS:
+* The theme functions have all been RENAMED to be more in line with Drupal 
+standards, so if you are overwriting the functions in your theme's 
+template.php or calling the functions anywhere in your theme, you should 
+update the function names. The old functions were called theme_nice_menu_* and 
+the new ones are theme_nice_menus_*, with an "s" to match the module name.
 
-NEW JAVASCRIPT
-The old JS has been completely removed and replaced with JS that uses the Superfish jQuery plugin. It now fires for ALL browsers by default, unless you turn the JS off in your settings at Administer > Site configuration > Nice menus (admin/build/nice_menus). If you had "Enable IE support" checked under older versions of NM, then the new JS will be on by default. If it was unchecked in your older version, then the update will turn JS off for you by default. If you turn JS off on the site (or a visitor comes without JS enabled), IE6 will no longer get the dropdown effect, but all other browsers will fall back to CSS-only dropdowns.
+* The drupal_add_js and drupal_add_css have been moved into the 
+theme_nice_menus() function and removed from nice_menus_init(). If you are 
+overriding theme_nice_menus(), you need to make sure you copy the new code 
+into your override or you won't have any JS or CSS added to you Nice Menus.
 
-CSS IDs and CLASSES
-The menu-$menuid ID has been changed to a CLASS to avoid invalid HTML when displaying the multiple menus which use the same menu ID. If you have custom CSS that depends on the menu ID then you need to change it to a class. For example:
+NEW JAVASCRIPT:
+The old JS has been completely removed and replaced with JS that uses the 
+Superfish jQuery plugin. It now fires for ALL browsers by default, unless you 
+turn the JS off in your settings at Administer > Site configuration > Nice 
+menus (admin/build/nice_menus). If you had "Enable IE support" checked under 
+older versions of NM, then the new JS will be on by default. If it was 
+unchecked in your older version, then the update will turn JS off for you by 
+default. If you turn JS off on the site (or a visitor comes without JS 
+enabled), IE6 will no longer get the dropdown effect, but all other browsers 
+will fall back to CSS-only dropdowns.
+
+CSS IDs and CLASSES:
+The menu-$menuid ID has been changed to a CLASS to avoid invalid HTML when 
+displaying the multiple menus which use the same menu ID. If you have custom 
+CSS that depends on the menu ID then you need to change it to a class. For 
+example:
   #menu-3 {color: #ff0};
 would need to be changed to
   .menu-3 {color: #ff0};
   
-IE-Specific Class removed
-The legacy "ie-over" class which was added for IE compatibility in the past has been replaced with a generic, non-browser-specific, "over" class since this is used by Superfish and should be general.
+* IE-Specific Class removed
+The legacy "ie-over" class which was added for IE compatibility in the past 
+has been replaced with a generic, non-browser-specific, "over" class since 
+this is used by Superfish and should be general.
 
 5.x ---> 6.x
 ------------
-Due to the menu system changes from 5 to 6, when you upgrade Nice Menus, your blocks will "forget" what menu they were set to. So take note of the blocks and menu settings prior to upgrade, then reset them after the upgrade. See the issue at http://drupal.org/node/524688 for more information.
+Due to the menu system changes from 5 to 6, when you upgrade Nice Menus, your 
+blocks will "forget" what menu they were set to. So take note of the blocks 
+and menu settings prior to upgrade, then reset them after the upgrade. See the 
+issue at http://drupal.org/node/524688 for more information.
 
 
 4.7 ---> 5.x
