@@ -11,22 +11,17 @@
  Global CSS for ALL menu types
 ******************************/
 
-ul.nice-menu li { 
-  float: right;  
-  /* Additional overrides to deal with Garland theme. */
-  padding-right: 0;
+ul.nice-menu li {
+  float: right;
 }
 
-ul.nice-menu ul,
-/* Repeat for Garland header. */
-#header-region ul.nice-menu ul {
+ul.nice-menu ul {
   left: auto;
   right: -1px;
   margin-left: 0;
 }
-/**
- * Fix vertical menus position
- */
+
+/* Fix vertical menus position */
 ul.nice-menu-left ul,
 ul.nice-menu-right ul{
     right:auto;
@@ -49,9 +44,7 @@ ul.nice-menu-down ul {
   width:12.5em;
 }
 
-ul.nice-menu-down li ul li ul,
-/* Repeat for Garland header. */
-#header-region ul.nice-menu-down li ul li ul {
+ul.nice-menu-down li ul li ul {
   left: auto;
   right: 12.5em;
 }
@@ -61,29 +54,62 @@ ul.nice-menu-down .menuparent a {
   padding-left: 15px;
 }
 
-ul.nice-menu-down li.menuparent,
-/* Repeat for Garland header. */
-#header-region ul.nice-menu-down li.menuparent {
+ul.nice-menu-down li.menuparent {
   background-position: left center;
 }
 
 ul.nice-menu-down li.menuparent:hover,
-ul.nice-menu-down li.over,
-/* Repeat for Garland header. */
+ul.nice-menu-down li.over {
+  background-position: left center;
+}
+
+ul.nice-menu-down li li.menuparent {
+  background: #eee url(arrow-left.png) left center no-repeat;
+}
+
+ul.nice-menu-down li li.menuparent:hover,
+ul.nice-menu-down li li.over {
+  background: #ccc url(arrow-left.png) left center no-repeat;
+}
+
+/******************************
+ Garland-specific CSS
+******************************/
+
+/**
+ * Global CSS for ALL menu types
+ */
+ul.nice-menu li {
+  padding-right: 0;
+}
+
+#header-region ul.nice-menu ul {
+  left: auto;
+  right: -1px;
+  margin-left: 0;
+}
+
+/**
+ * HORIZONTAL (down) menus
+ */
+#header-region ul.nice-menu-down li ul li ul {
+  left: auto;
+  right: 12.5em;
+}
+
+#header-region ul.nice-menu-down li.menuparent {
+  background-position: left center;
+}
+
 #header-region ul.nice-menu-down li.menuparent:hover,
 #header-region ul.nice-menu-down li.over {
   background-position: left center;
 }
 
-ul.nice-menu-down li li.menuparent,
-/* Repeat for Garland header. */
 #header-region ul.nice-menu-down li li.menuparent {
   background: #eee url(arrow-left.png) left center no-repeat;
 }
 
-ul.nice-menu-down li li.menuparent:hover,
-ul.nice-menu-down li li.over,
-/* Repeat for Garland header. */
 #header-region ul.nice-menu-down li li.menuparent:hover,
 #header-region ul.nice-menu-down li li.over {
   background: #ccc url(arrow-left.png) left center no-repeat;
